--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 							<li>
 								<a href="#">Case Studies</a>
 								<ul>
-									<li><a href="vancouver-bc.html">Vancouver, BC</a></li>
-									<li><a href="seattle-wa.html">Seattle, WA</a></li>
-									<li><a href="sanmateo-ca.html">San Mateo, CA</a></li>
-									<li>
+									<li><a href="case-studies/vancouver-bc.html">Vancouver, BC</a></li>
+									<li><a href="case-studies/seattle-wa.html">Seattle, WA</a></li>
+									<li><a href="case-studies/sanmateo-ca.html">San Mateo, CA</a></li>
+									<!-- <li>
 										<a href="#">Submenu</a>
 										<ul>
 											<li><a href="#">Option 1</a></li>
@@ -35,7 +35,7 @@
 											<li><a href="#">Option 3</a></li>
 											<li><a href="#">Option 4</a></li>
 										</ul>
-									</li>
+									</li> -->
 								</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>
