--- a/case-studies/sanmateo-ca.html
+++ b/case-studies/sanmateo-ca.html
@@ -85,7 +85,7 @@
 								<!-- Content -->
 									<section id="content">
 										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
-										<h3>Richards Green Complete Street Improvements</h3>
+										<h3>Sustainable Streets Plan</h3>
 										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
 										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
