--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<!-- <title>Landed by HTML5 UP</title> -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<!-- <h1 id="logo"><a href="index.html">Landed</a></h1> -->
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -38,8 +38,8 @@
 									</li> -->
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<!-- <li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -49,9 +49,9 @@
 					<div class="content">
 						<header>
 							<h2>Green (Complete) Streets</h2>
-							<a href="https://www.vecteezy.com/free-vector/building">Building Vectors by Vecteezy</a>
-							<p><br />
-							Just apps. Lots of mother flipping apps.</p>
+							<!-- <a href="https://www.vecteezy.com/free-vector/building">Building Vectors by Vecteezy</a> -->
+							<!-- <p><br />
+							Just apps. Lots of mother flipping apps.</p> -->
 						</header>
 						<span class="image"><img src="images/green-square.png" alt="" /></span>
 					</div>
