Adding urban meadows section

--- a/case-studies/vancouver-bc.html
+++ b/case-studies/vancouver-bc.html
@@ -66,9 +66,9 @@
 											</footer>
 										</section>
 										<hr />
-										<section>
+										<!-- <section> -->
 											<!-- <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a> -->
-											<iframe class="image" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+											<!-- <iframe class="image" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 											<h3>Amet Lorem Tempus</h3>
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 											<footer>
@@ -76,7 +76,7 @@
 													<li><a href="#" class="button">Learn More</a></li>
 												</ul>
 											</footer>
-										</section>
+										</section> -->
 									</section>
 
 							</div>
@@ -87,16 +87,22 @@
 										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
 										<h3>Richards Green Complete Street Improvements</h3>
 										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
+										<p>This project in the heart of Vancvouer put in 10 blocks of protected bike lanes, 8 of which also include green infrastructure. 100 trees were planted. Each year, this project treats 50 million liters of water to take out pollutants and diverts 11 million liters of water from the pipe system.</p>
 										<h3>Green Streets Program</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
+										<p>Vancouver's Green Streets Program began as a grassroots pilot project with 15 volunteer gardeners. 
+											Over the past couple of decades it has bloomed into a program with hundreds of gardeners who care for 
+											planted traffic circles and bulbouts across Vancouver.</p>
+										<h3>Urban Meadows</h3>
+										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/watch?v=7SEJSmDZLF0" title="Vancouver's Urban Meadows" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+										
+										<p>Vancouver's urban meadows are great examples of using green infrastructure to 
+											create more livable cities and streets for humans and to build resilience to climate change.</p>
 										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+											<li>Creating habitat for pollinators and other wildlife.</li>
+											<li>Increasing biodiversity in the urban landscape.</li>
+											<li>Reducing urban heat island effects.</li>
+
 										</ul>
 									</section>
 
