--- a/case-studies/vancouver-bc.html
+++ b/case-studies/vancouver-bc.html
@@ -93,8 +93,7 @@
 											Over the past couple of decades it has bloomed into a program with hundreds of gardeners who care for 
 											planted traffic circles and bulbouts across Vancouver.</p>
 										<h3>Urban Meadows</h3>
-										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/watch?v=7SEJSmDZLF0" title="Vancouver's Urban Meadows" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/7SEJSmDZLF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										
 										<p>Vancouver's urban meadows are great examples of using green infrastructure to 
 											create more livable cities and streets for humans and to build resilience to climate change.</p>
