--- a/case-studies/vancouver-bc.html
+++ b/case-studies/vancouver-bc.html
@@ -49,7 +49,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Vancouver, BC</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>The Greenest City</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -58,7 +58,7 @@
 									<section id="sidebar">
 										<section>
 											<h3>Policies</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+											<p>Coming soon</p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Learn More</a></li>
@@ -86,7 +86,7 @@
 									<section id="content">
 										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
 										<h3>Richards Green Complete Street Improvements</h3>
-										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe class="image fit" width="560" height="315" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										<p>This project in the heart of Vancvouer put in 10 blocks of protected bike lanes, 8 of which also include green infrastructure. 100 trees were planted. Each year, this project treats 50 million liters of water to take out pollutants and diverts 11 million liters of water from the pipe system.</p>
 										<h3>Green Streets Program</h3>
 										<p>Vancouver's Green Streets Program began as a grassroots pilot project with 15 volunteer gardeners. 
