updating text and images

--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Green (Complete) Streets</h2>
-							<!-- <a href="https://www.vecteezy.com/free-vector/building">Building Vectors by Vecteezy</a> -->
-							<!-- <p><br />
-							Just apps. Lots of mother flipping apps.</p> -->
+							<h2>Streets</h2>
+							<h2>Green is the new Complete</h2>
 						</header>
-						<span class="image"><img src="images/green-square.png" alt="" /></span>
+						<!-- <span class="image"><img src="images/green-is-the-new-complete-reverse.png" alt="" /></span> -->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -66,27 +64,16 @@
 							<div class="col-4 col-12-medium">
 								<header>
 									<h2>Green (and) Complete Streets</h2>
-									<p>This movement (or policy) has many names as the industry has yet to align on a single one:</p>
 								</header>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>This movement (or policy) has many names as the industry has yet to align on a single one:
-									<ul>
-										<li>Green (and) Complete Streets</li>
-										<li>Green Streets</li>
-										<li>Sustainable Streets</li>
-										<li>Resilient Streets</li>
-										<li>Urban Greening</li>
-									</ul>
-									
+								<p>Climate change is a growing challenge. Our streets are flooding. Our cities are getting hotter.
+									Much of the call for change has been at the global level. However, equally as meaningful change can happen at the local level.
 								</p>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-								adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-								Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-								mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-								ipsum dolor nullam.</p>
+								<p>Marrying Complete Streets and Green Infrastructure in a more climate resilient and holistic
+									approach to street design can create that change, one city at a time.</p>
 							</div>
 						</div>
 					</div>
@@ -96,22 +83,18 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/drought-uni-cal.jpeg" alt="" /></span>
+					<span class="image fit main"><img src="images/flooding.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Drought</h2>
+										<h2>Flooding</h2>
 										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Streets are typically covered with impervious materials like asphalt or concrete, which prevent water from infiltrating into the ground. </p>
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
@@ -128,13 +111,14 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/cityscape sunset.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/urban-heat-island.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Urban Heat Island Effect</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<p>Streets play a crucial role in the development and intensification of the urban heat island effect.</p>
 						</header>
-						<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
+						<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. 
+							This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -160,10 +144,10 @@
 
 			<!-- Five -->
 			<section id="four" class="spotlight style2 right">
-				<span class="image fit main"><img src="images/cityscape sunset.jpg" alt="" /></span>
+				<span class="image fit main"><img src="images/urban-heat-island-effect.jpg" alt="" /></span>
 				<div class="content">
 					<header>
-						<h2>Biodiverity</h2>
+						<h2>Biodiversity</h2>
 						<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
 					</header>
 					<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
