Changing the content on the landing page and adding a flooding details page

--- a/flooding.html
+++ b/flooding.html
@@ -48,8 +48,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>San Mateo, CA</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Urban Flooding</h2>
+							<p>Flooding isn't an isolated issue. We see it happening in cities in California, the United States, and around the world.</p>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-4 col-12-medium">
@@ -57,20 +57,31 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<h3>Policies</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
+											<h3>Why is it happening?</h3>
+											<!-- source: https://www.ppic.org/publication/floods-in-california/ -->
+											<!-- update teh following as copied directl -->
+											<p>Heavy rainfalls often lead to flooding in our cities because <strong>impermeable surfaces</strong> -- streets and parking lots covered with asphalt -- allow water to pond quickly and deeply.</p>
+											<p>Add detail about what percentage of our streets are covered in asphalt. Does Google have this stat?</p>
+
+											<!-- <footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Learn More</a></li>
 												</ul>
-											</footer>
+											</footer> -->
 										</section>
 										<hr />
 										<section>
 											<!-- <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a> -->
 											<!-- <iframe class="image" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
+											<h3>How much is it costing us?</h3>
+											<p>Various estimates of the cost of flooding in California. Other examples around the country?</p>
+	
+										</section>
+										<section>
+											<!-- <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a> -->
+											<!-- <iframe class="image" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+											<h3>How can we fix it?</h3>
+											<p>Various measures. TBA </p>
 											<footer>
 												<ul class="actions">
 													<li><a href="#" class="button">Learn More</a></li>
@@ -84,11 +95,19 @@
 
 								<!-- Content -->
 									<section id="content">
-										<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
-										<h3>Sustainable Streets Plan</h3>
-										<iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
+										<h3>In 2023, cities were hit hard and suffered devastating and costly damage.</h3>
+										<section class="example">
+											<p>San Francisco, California (December 2023)</p>
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/RmVGJhj4e0Y?si=yg8bBISPm50L-DgO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+											<!-- <iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+
+										</section>
+										<section class="example">
+											<p>San Francisco, California (December 2023)</p>
+											<!-- <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a> -->
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/RmVGJhj4e0Y?si=yg8bBISPm50L-DgO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+											<!-- <iframe class="image fit" width="996" height="560" src="https://www.youtube.com/embed/N4AurBEdHec" title="Richards Green Complete Street Improvements" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										</section>
 										<h3>Green Streets Program</h3>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
 										<ul>
@@ -118,7 +137,6 @@
 					<li>&copy; April Webster, 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
-
 		</div>
 
 		<!-- Scripts -->
