--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<!-- <title>Landed by HTML5 UP</title> -->
+		<title>Green Complete Streets</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<!-- <h1 id="logo"><a href="index.html">Landed</a></h1> -->
+					<!-- <h1 id="logo"><a href="index.html">Green Complete Streets</a></h1> -->
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -48,15 +48,15 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Streets</h2>
-							<h2>Green is the new Complete</h2>
+							<h1>Green Streets are Complete Streets</h1>
+							<h2>A Guide for Concerned Citizens and Cities</h2>
 						</header>
 						<!-- <span class="image"><img src="images/green-is-the-new-complete-reverse.png" alt="" /></span> -->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 			<!-- One -->
-			<section id="one" class="spotlight style1 bottom">
+			<section id="one" class="spotlight style3 bottom">
 				<span class="image fit main"><img src="images/sunset_park_street_closure_b_body_image.jpeg" alt="" /></span>
 				<div class="content">
 					<div class="container">
@@ -67,13 +67,12 @@
 								</header>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>Climate change is a growing challenge. Our streets are flooding. Our cities are getting hotter.
-									Much of the call for change has been at the global level. However, equally as meaningful change can happen at the local level.
-								</p>
+								<p>Green Complete Streets is a <strong>holistic approach</strong> to street design that combines <strong>Complete Streets</strong> principles and design elements with the use of <strong>green infrastructure</strong>. 
+
+</p>
 							</div>
 							<div class="col-4 col-12-medium">
-								<p>Marrying Complete Streets and Green Infrastructure in a more climate resilient and holistic
-									approach to street design can create that change, one city at a time.</p>
+								<p>Integrating the two can create more livable, equitable, and climate resilient cities with streets that are safer and more enjoyable to use for everyone.</p>
 							</div>
 						</div>
 					</div>
@@ -82,26 +81,48 @@
 			</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
+				<section id="one" class="spotlight style3 bottom">
 					<span class="image fit main"><img src="images/flooding.png" alt="" /></span>
 					<div class="content">
+						<header>
+							
+							<!-- <p>can mitigate flooding, lower temperatures, improve air quality, address urban biodiversity, and save money.</p> -->
+						</header>
 						<div class="container">
 							<div class="row">
+								<header>
+									<h2>At the city level, green complete streets...</h2>
+								</header>
+							</div>
+							
+							<div class="row">
+								<!-- had sub-header before -->
 								<div class="col-4 col-12-medium">
-									<header>
-										<h2>Flooding</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
-									</header>
+									<p>Can <strong>combat adverse climate effects</strong> including:
+										<ul>
+											<li>mitigating floooding</li>
+											<li>lowering city temperatures</li>
+											<li>improving air quality</li>
+											<li>increasing urban biodiversity</li>
+										</ul>
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Streets are typically covered with impervious materials like asphalt or concrete, which prevent water from infiltrating into the ground. </p>
+									<p>Can <strong>save a city money</strong> by reducing maintenance costs caused by: 
+										<ul>
+											<li>cracking and potholes from by rains and flooding</li>
+											<li>fading and deterioration from UV rays</li>
+										</ul>
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Can <strong>improve our health</strong> -- both physical + mental -- and reduce healthcare costs by: 
+										<ul>
+											<li>encouraging us to walk and bike more</li>
+											<li>getting us outside in the sun and urban greenspaces</li>
+											<li>providing opportunities to connect with our neighbours</li>
+										</ul>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -109,16 +130,33 @@
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
 
+			<!-- Three -->
+			<section id="three" class="spotlight style3 left">
+				<span class="image fit main bottom"><img src="images/flooding.png" alt="" /></span>
+				<div class="content">
+					<header>
+						<h2>Urban Flooding</h2>
+						<p>TBA</p>
+					</header>
+					<p>Streets are typically covered with impervious materials like asphalt or concrete, which prevent water from infiltrating into the ground..</p>
+					<ul class="actions">
+						<li><a href="flooding.html" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<a href="#four" class="goto-next scrolly">Next</a>
+			</section>
+
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
+				<section id="two" class="spotlight style3 right">
 					<span class="image fit main"><img src="images/urban-heat-island.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Urban Heat Island Effect</h2>
-							<p>Streets play a crucial role in the development and intensification of the urban heat island effect.</p>
+							<p>Streets play a crucial role in the intensification of the urban heat island effect.</p>
 						</header>
 						<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. 
-							This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
+							This difference in temperature can be attributed to the difference in the nature of the surface in each environment. 
+							</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -131,7 +169,7 @@
 					<span class="image fit main bottom"><img src="images/orange-san-francisco.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Air Quality</h2>
+							<h2>Urban Air Quality</h2>
 							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
@@ -143,11 +181,11 @@
 				</section>
 
 			<!-- Five -->
-			<section id="four" class="spotlight style2 right">
+			<section id="four" class="spotlight style3 right">
 				<span class="image fit main"><img src="images/urban-heat-island-effect.jpg" alt="" /></span>
 				<div class="content">
 					<header>
-						<h2>Biodiversity</h2>
+						<h2>Urban Biodiversity</h2>
 						<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
 					</header>
 					<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
@@ -158,8 +196,54 @@
 				<a href="#five" class="goto-next scrolly">Next</a>
 			</section>
 
+			<!-- One -->
+			<section id="one" class="spotlight style3 bottom">
+				<span class="image fit main"><img src="images/flooding.png" alt="" /></span>
+				<div class="content">
+					<div class="container">
+						<div class="row">
+							<div class="col-4 col-12-medium">
+								<header>
+									<h2>Cost of living</h2>
+									<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+								</header>
+							</div>
+							<div class="col-4 col-12-medium">
+								<p>Streets are typically covered with impervious materials like asphalt or concrete, which prevent water from infiltrating into the ground. </p>
+							</div>
+							<div class="col-4 col-12-medium">
+								<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+								adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+								Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+								mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+								ipsum dolor nullam.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<a href="#two" class="goto-next scrolly">Next</a>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="spotlight style3 right">
+				<span class="image fit main"><img src="images/urban-heat-island.png" alt="" /></span>
+				<div class="content">
+					<header>
+						<h2>Operating Costs for Cities</h2>
+						<p>Streets play a crucial role in the intensification of the urban heat island effect.</p>
+					</header>
+					<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. 
+						This difference in temperature can be attributed to the difference in the nature of the surface in each environment. 
+						</p>
+					<ul class="actions">
+						<li><a href="#" class="button">Learn More</a></li>
+					</ul>
+				</div>
+				<a href="#three" class="goto-next scrolly">Next</a>
+			</section>
+
 			<!-- Four -->
-				<section id="five" class="wrapper style1 special fade-up">
+				<!-- <section id="five" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Accumsan sed tempus adipiscing blandit</h2>
@@ -205,7 +289,7 @@
 							</ul>
 						</footer>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- Five -->
 				<section id="five" class="wrapper style2 special fade">
@@ -226,15 +310,14 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+						<li><a href="https://www.instagram.com/greencompletestreets/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto:greencompletestreets@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; April Webster. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; April Webster, 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
