Removing incomplete content in the index

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 				<div class="content">
 					<header>
 						<h2>Urban Flooding</h2>
-						<p>TBA</p>
+						<!-- <p>TBA</p> -->
 					</header>
 					<p>Streets are typically covered with impervious materials like asphalt or concrete, which prevent water from infiltrating into the ground..</p>
 					<ul class="actions">
@@ -170,9 +170,9 @@
 					<div class="content">
 						<header>
 							<h2>Urban Air Quality</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<!-- <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p> -->
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<!-- <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p> -->
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -181,23 +181,23 @@
 				</section>
 
 			<!-- Five -->
-			<section id="four" class="spotlight style3 right">
+			<!-- <section id="four" class="spotlight style3 right">
 				<span class="image fit main"><img src="images/urban-heat-island-effect.jpg" alt="" /></span>
 				<div class="content">
 					<header>
 						<h2>Urban Biodiversity</h2>
-						<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+						<p></p> 
 					</header>
-					<p>Cities typically experience temperatures that are several degrees hotter than the surrounding rural areas. This difference in temperature can be attributed to the difference in the nature of the surface in each environment. </p>
+					<p></p> 
 					<ul class="actions">
 						<li><a href="#" class="button">Learn More</a></li>
 					</ul>
 				</div>
 				<a href="#five" class="goto-next scrolly">Next</a>
-			</section>
+			</section> -->
 
 			<!-- One -->
-			<section id="one" class="spotlight style3 bottom">
+			<!-- <section id="one" class="spotlight style3 bottom">
 				<span class="image fit main"><img src="images/flooding.png" alt="" /></span>
 				<div class="content">
 					<div class="container">
@@ -222,10 +222,10 @@
 					</div>
 				</div>
 				<a href="#two" class="goto-next scrolly">Next</a>
-			</section>
+			</section> -->
 
 			<!-- Two -->
-			<section id="two" class="spotlight style3 right">
+			<!-- <section id="two" class="spotlight style3 right">
 				<span class="image fit main"><img src="images/urban-heat-island.png" alt="" /></span>
 				<div class="content">
 					<header>
@@ -240,7 +240,7 @@
 					</ul>
 				</div>
 				<a href="#three" class="goto-next scrolly">Next</a>
-			</section>
+			</section> -->
 
 			<!-- Four -->
 				<!-- <section id="five" class="wrapper style1 special fade-up">
@@ -295,27 +295,34 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Have questions or would like to contribute content?</h2>
+							<p>Please reach out to connect and share! </p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<!-- <form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
 							</div>
-						</form>
+						</form> -->
+						<ul class="icons">
+							<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+							<li><a href="https://www.instagram.com/greencompletestreets/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:greencompletestreets@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
 					</div>
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<!-- <ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.instagram.com/greencompletestreets/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="mailto:greencompletestreets@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+					</ul> -->
 					<ul class="copyright">
 						<li>&copy; April Webster, 2021. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
