Fixing the title

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Green Streets are Complete Streets</h1>
+							<h1>Green Complete Streets</h1>
 							<h2>A Guide for Concerned Citizens and Cities</h2>
 						</header>
 						<!-- <span class="image"><img src="images/green-is-the-new-complete-reverse.png" alt="" /></span> -->
