--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<!-- <h1 id="logo"><a href="index.html">Green Complete Streets</a></h1> -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<!-- <li><a href="index.html">Home</a></li> -->
 							<li>
 								<a href="#">Case Studies</a>
 								<ul>
