--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
             text-align: center;
         }
         .container {
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(34, 139, 34, 0.85); /* Semi-transparent forest green background */
             padding: 20px;
             border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Optional shadow for better contrast */
         }
         h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            color: #fff;
         }
         p {
             font-size: 1.2em;
+            color: #fff;
         }
     </style>
 </head>
