--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
             justify-content: center;
             align-items: center;
             font-family: Arial, sans-serif;
-            background: url('images/tree-lined-street.jpg') no-repeat center center fixed;
+            background: url('images/sunset_park_street_closure_b_body_image.jpeg') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             text-align: center;
+            position: relative;
+        }
+        /* Adding an overlay to fade the background image */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4); /* Black overlay with 40% opacity */
+            z-index: 1;
         }
         .container {
+            position: relative;
+            z-index: 2;
             background-color: rgba(34, 139, 34, 0.85); /* Semi-transparent forest green background */
             padding: 20px;
             border-radius: 10px;
@@ -42,4 +56,3 @@
     </div>
 </body>
 </html>
-
