--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             font-family: Arial, sans-serif;
             background: url('images/sunset_park_street_closure_b_body_image.jpeg') no-repeat center center fixed;
+            backdrop-filter: blur(1px);
             background-size: cover;
             color: #fff;
             text-align: center;
