--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             align-items: center;
             font-family: Arial, sans-serif;
             background: url('images/sunset_park_street_closure_b_body_image.jpeg') no-repeat center center fixed;
-            backdrop-filter: blur(1px);
             background-size: cover;
             color: #fff;
             text-align: center;
         }
         .container {
             background-color: rgba(34, 139, 34, 0.85); /* Semi-transparent forest green background */
+            backdrop-filter: brightness(0.7) blur(5px); /* Make the image less bright and add a slight blur */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Optional shadow for better contrast */
