--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         }
         .container {
             background-color: rgba(34, 139, 34, 0.85); /* Semi-transparent forest green background */
-            backdrop-filter: brightness(0.7) blur(5px); /* Make the image less bright and add a slight blur */
+            /* backdrop-filter: brightness(0.5) blur(5px); Make the image less bright and add a slight blur */
+            backdrop-filter: blur(1px);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* Optional shadow for better contrast */
