--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Our website is under construction</h1>
+        <h1>Much like our cities, this website is under construction.</h1>
         <p>We'll be here soon with our new awesome site.</p>
     </div>
 </body>
